--- a/assets/style/_section1.scss
+++ b/assets/style/_section1.scss
@@ -11,7 +11,7 @@
 }
 
 .section-header-one {
-    height: 880px;
+    // height: 880px;
     padding: 10px;
     background: $section-one-bg-color;
     box-sizing: border-box;
