--- a/assets/style/_section1mobile.scss
+++ b/assets/style/_section1mobile.scss
@@ -13,7 +13,7 @@
 .overlay-drop{
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: 200vh;
     width: 0;
     overflow-x: hidden;
     position: fixed;
